# SpringEstimator

./: CMakeLists.txt  README.md
binding/python/: CMakeLists.txt  __init__.py  generate.py
src/: CMakeLists.txt  SpringEstimator.cpp  SpringEstimator.h
tests/: CMakeLists.txt  SpringEstimatorTest.cpp  ThreeDofArm.h  TwoDofArm.h  plotQPrism.py  plotTErr.py
